# tugas-besar-1-mpl

./: .codex-desain-kelas-nimonspoli.txt  .codex-spesifikasi-nimonspoli.txt  .gitattributes  .gitignore  README.md  makefile
config/: property.txt
config_dynamic/board20/: aksi.txt  misc.txt  property.txt
config_dynamic/board60/: aksi.txt  misc.txt  property.txt  tax.txt
data/: game_sesi1.txt
gui/: .gitignore  BuildRun.bat  CMakeLists.txt  main.cpp
gui/include/core/: GuiGameSession.hpp  QtGameIO.hpp
gui/include/utils/: UiCommon.hpp
gui/include/views/: BoardWidget.hpp  GameSetupPage.hpp  GameWindow.hpp  PropertyCardWidget.hpp  PropertyPortfolioWidget.hpp  StartMenuPage.hpp
gui/src/core/: GuiGameSession.cpp  QtGameIO.cpp
gui/src/utils/: UiCommon.cpp
gui/src/views/: BoardWidget.cpp  GameSetupPage.cpp  GameWindow.cpp  PropertyCardWidget.cpp  PropertyPortfolioWidget.cpp  StartMenuPage.cpp
include/app/: CliApplication.hpp
include/core/: AssetManager.hpp  AuctionManager.hpp  BankruptcyHandler.hpp  Board.hpp  BoardFactory.hpp  CommandProcessor.hpp  CommandResult.hpp  CoreGameSession.hpp  DeckFactory.hpp  Dice.hpp  GameContext.hpp  GameEngine.hpp  GameIO.hpp  GameStateMapper.hpp  MovementService.hpp  PropertyTransactionService.hpp  TurnManager.hpp  TurnService.hpp
include/models/: Enums.hpp  Player.hpp
include/models/cards/: ActionCard.hpp  BirthdayCard.hpp  CampaignCard.hpp  DemolitionCard.hpp  DiscountCard.hpp  DoctorFeeCard.hpp  GoToJailCard.hpp  LassoCard.hpp  MoveBackCard.hpp  MoveCard.hpp  MoveToNearestStationCard.hpp  ShieldCard.hpp  SkillCard.hpp  TeleportCard.hpp
include/models/config/: ActionTileConfig.hpp  ConfigData.hpp  MiscConfig.hpp  PropertyConfig.hpp  SpecialConfig.hpp  TaxConfig.hpp
include/models/state/: Command.hpp  GameState.hpp  LogEntry.hpp  PlayerState.hpp  PropertyState.hpp
include/models/tiles/: ActionTile.hpp  CardTile.hpp  FestivalTile.hpp  FreeParkingTile.hpp  GoTile.hpp  GoToJailTile.hpp  JailTile.hpp  PropertyTile.hpp  RailroadTile.hpp  StreetTile.hpp  TaxTile.hpp  Tile.hpp  UtilityTile.hpp
include/utils/: CardDeck.hpp  ConfigLoader.hpp  OutputFormatter.hpp  SaveManager.hpp  TextFormatter.hpp  TransactionLogger.hpp
include/utils/exceptions/: CardHandFullException.hpp  ExceptionHandler.hpp  InsufficientFundsException.hpp  InvalidCommandException.hpp  InvalidPropertyException.hpp  NimonspoliException.hpp
include/views/: BoardRenderer.hpp  CliOutputFormatter.hpp  CommandParser.hpp  GameUI.hpp  PropertyCardRenderer.hpp
src/: main.cpp
src/app/: CliApplication.cpp
src/core/: AssetManager.cpp  AuctionManager.cpp  BankruptcyHandler.cpp  Board.cpp  BoardFactory.cpp  CommandProcessor.cpp  CommandResult.cpp  CoreGameSession.cpp  DeckFactory.cpp  Dice.cpp  GameContext.cpp  GameEngine.cpp  GameIO.cpp  GameStateMapper.cpp  MovementService.cpp  PropertyTransactionService.cpp  TurnManager.cpp  TurnService.cpp
src/models/: Player.cpp
src/models/cards/: ActionCard.cpp  BirthdayCard.cpp  CampaignCard.cpp  DemolitionCard.cpp  DiscountCard.cpp  DoctorFeeCard.cpp  GoToJailCard.cpp  LassoCard.cpp  MoveBackCard.cpp  MoveCard.cpp  MoveToNearestStationCard.cpp  ShieldCard.cpp  SkillCard.cpp  TeleportCard.cpp
src/models/config/: ActionTileConfig.cpp  ConfigData.cpp  MiscConfig.cpp  PropertyConfig.cpp  SpecialConfig.cpp  TaxConfig.cpp
src/models/state/: Command.cpp  GameState.cpp  LogEntry.cpp  PlayerState.cpp  PropertyState.cpp
src/models/tiles/: ActionTile.cpp  CardTile.cpp  FestivalTile.cpp  FreeParkingTile.cpp  GoTile.cpp  GoToJailTile.cpp  JailTile.cpp  PropertyTile.cpp  RailroadTile.cpp  StreetTile.cpp  TaxTile.cpp  Tile.cpp  UtilityTile.cpp
src/utils/: ConfigLoader.cpp  OutputFormatter.cpp  SaveManager.cpp  TextFormatter.cpp  TransactionLogger.cpp
src/utils/exceptions/: CardHandFullException.cpp  InsufficientFundsException.cpp  InvalidCommandException.cpp  InvalidPropertyException.cpp
src/views/: BoardRenderer.cpp  CliOutputFormatter.cpp  CommandParser.cpp  GameUI.cpp  PropertyCardRenderer.cpp
untitled/: CMakeLists.txt  build_and_run.bat  main.cpp
untitled/include/: BoardWidget.hpp  GameWindow.hpp  MonopolyUiShared.hpp  PropertyCardWidget.hpp
untitled/pion/: UGM.avif
untitled/src/: BoardWidget.cpp  GameWindow.cpp  MonopolyUiShared.cpp  PropertyCardWidget.cpp
untitled/tests/: BoardWidgetSmokeTest.cpp
